reenable java https source test